Refactor rest api, fix documentation
